--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Spotify Imersão</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./src/assets/icons/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="src/styles/reset.css">
+    <link rel="stylesheet" href="src/styles\vars.css">
+    <link rel="stylesheet" href="src\styles\main-content.css">
+    <link rel="stylesheet" href="src/styles\sidebar-footer.css">
+    <link rel="stylesheet" href="src\styles\playlist-container.css">
+    <link rel="stylesheet" href="src\styles\media-querie.css">
+    
+
     <link rel="stylesheet"
      href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css">
@@ -15,7 +23,7 @@
         <nav class="sidebar_navigation">
             <div class="Logo">
                 <a href="">
-                <img src="./assets/logospotkids.png" alt=" Logo do Spotify">
+                <img src="src\assets\icons\logo-spotify.png" alt=" Logo do Spotify">
                 </a>
             </div>
             <div>
@@ -64,5 +72,202 @@
             </button>
         </div>
     </div>
-    </body>
-    </html>
+
+    <main>
+        <div class="main-container">
+            <nav class="header__navigation">
+                <div class="navigation">
+                    <button class="arrow-left">
+                        <img src="src/assets/icons/small-left.png" alt="Seta esquerda">
+                    </button>
+                    <button class="arrow-right">
+                        <img src="src/assets/icons/small-right.png" alt="Seta direita">
+                    </button>
+                </div>
+                <div class="hearder__search">
+                    <img src="src/assets/icons/search.png" alt="">
+                    <input id="search-input" type="text" maxlength="800" placeholder="O que você quer ouvir?"/>
+                </div>
+                <div class="header__login">
+                    <button class="subscribe">Inscreva-se</button>
+                    <button class="login">Entrar</button>
+                </div>
+            </nav>
+        </div>
+        <div class="playlist-container">
+            <div class="result-playlists">
+                <div class="playlist"></div>
+                    <h1 id="greeting">Boa noite!</h1>
+            <h2 class="session">Navegar por todas as seções</h2>
+            <div class=" sustentauro">
+              <img src="src\assets\icons\OIG2-removebg-preview.png" alt=" Sustentauro, mascote oficial do projeto Criança sustentavel Spotify.">
+            </div>
+            </div>
+        <div class="offer__scroll-container">
+            <div class="offer__list">
+              <section class="offer__list-item">
+                
+                <a href="" class="cards">
+                  <div class="cards card1">
+                    <img src="src\assets\playlist\1.jpg" alt="" />
+                    <span>Sons da natureza</span>
+                  </div>
+                </a>
+
+                <a href="" class="cards">
+                    <div class="cards card2">
+                      <img src="src\assets\playlist\2.jpg" alt="" />
+                      <span>Festa dos bichos</span>
+                    </div>
+                  </a>
+  
+                <!-- CARD 3 --> 
+                <a href="" class="cards">
+                    <div class="cards card3">
+                      <img src="src\assets\playlist\3.jpg" alt="" />
+                      <span>Podcasts</span>
+                    </div>
+                  </a>
+  
+                  <!-- CARD 4 -->
+                  <a href="" class="cards">
+                    <div class="cards card4">
+                      <img src="./src/assets/playlist/4.jpeg" alt="" />
+                      <span>Sons dos animais</span>
+                    </div>
+                  </a>
+  
+                  <!-- CARD 5 -->
+                  <a href="" class="cards">
+                    <div class="cards card5">
+                      <img src="./src/assets/playlist/5.jpeg" alt="" />
+                      <span>Mundo Bita</span>
+                    </div>
+                  </a>
+  
+                  <!-- CARD 6 -->
+                  <a href="" class="cards">
+                    <div class="cards card6">
+                      <img src="./src/assets/playlist/6.jpeg" alt="" />
+                      <span>Nosso planeta</span>
+                    </div>
+                  </a>
+  
+                  <!-- CARD 7 -->
+                  <a href="" class="cards">
+                    <div class="cards card7">
+                      <img src="./src/assets/playlist/7.jpeg" alt="" />
+                      <span>Criança e Natureza</span>
+                    </div>
+                  </a>
+  
+                  <!-- CARD 8 -->
+                  <a href="" class="cards">
+                    <div class="cards card8">
+                      <img src="./src/assets/playlist/8.jpeg" alt="" />
+                      <span>Explorando a floresta</span>
+                    </div>
+                  </a>
+  
+                  <!-- CARD 9 -->
+                  <a href="" class="cards">
+                    <div class="cards card9">
+                      <img src="./src/assets/playlist/9.jpeg" alt="" />
+                      <span>Sons do mar</span>
+                    </div>
+                  </a>
+  
+                  <!-- CARD 10 -->
+                  <a href="" class="cards">
+                    <div class="cards card10">
+                      <img src="./src/assets/playlist/10.jpeg" alt="" />
+                      <span>Mãe Natureza</span>
+                    </div>
+                  </a>
+  
+                  <!-- CARD 11 -->
+                  <a href="" class="cards">
+                    <div class="cards card11">
+                      <img src="./src/assets/playlist/11.jpeg" alt="" />
+                      <span>Sons da terra</span>
+                    </div>
+                  </a>
+  
+                  <!-- CARD 12 -->
+                  <a href="" class="cards">
+                    <div class="cards card12">
+                      <img src="./src/assets/playlist/12.jpeg" alt="" />
+                      <span>Documentarios</span>
+                    </div>
+                  </a>
+  
+                  <!-- CARD 13 -->
+                  <a href="" class="cards">
+                    <div class="cards card13">
+                      <img src="./src/assets/playlist/13.jpeg" alt="" />
+                      <span>Que som é esse?</span>
+                    </div>
+                  </a>
+  
+                  <!-- CARD 14 -->
+                  <a href="" class="cards">
+                    <div class="cards card14">
+                      <img src="./src/assets/playlist/14.jpeg" alt="" />
+                      <span>Ingles e documentarios</span>
+                    </div>
+                  </a>
+  
+                  <!-- CARD 15 -->
+                  <a href="" class="cards">
+                    <div class="cards card15">
+                      <img src="./src/assets/playlist/15.jpeg" alt="" />
+                      <span>Canções de animais para crianças</span>
+                    </div>
+                  </a>
+                </section>
+              </div>
+            </div>
+          </div>
+
+          <div id="result-artist" class="hidden">
+            <div class="grid-container">
+              <div class="artist-card" id="">
+                <div class="card-img">
+                  <img id="artist-img" class="artist-img" />
+                  <div class="play">
+                    <span class="fa fa-solid fa-play"></span>
+                  </div>
+                </div>
+                <div class="card-text">
+                  <a title="Foo Fighters" class="vst" href=""></a>
+                  <span class="artist-name" id="artist-name"></span>
+                  <span class="artist-categorie">Artista</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+  
+        </div>
+      </div>
+  
+    </main>
+  
+  
+    <footer class="disclaimer-premium">
+      <div class="text">
+        <p class="disclaimer-premium__title">Criança sustentavel</p>
+        <p class="disclaimer-premium__subtitle">
+          Explorar, aprender, salvar! Juntos, somos heróis do planeta! Clique para começar sua jornada sustentável agora! 🌍.
+        </p>
+      </div>
+      <div class="button">
+        <button type="button">EcoClique!</button>
+      </div>
+    </footer>
+    <script type="text/javascript" src="./script.js"></script>
+  
+
+  </body>
+  
+  </html>
